Changes for 1.6.1.1
* Updating build to include old jars. Updating framework to ignore micro version numbers, so that 1.5.2.1 will also load 1.5.2.0 savegames, etc. (veqryn)

* Created dialog to ask user if they want to load an old savegame.  Fixed framework so that it can load any old savegame if it can find an old engine to match. And added 1.6.0.0 jar engine. (veqryn)

* Including old 1.5.2.1 jar file with slight modifications, so that 1.6.1.1 can play 1.5.2.1 savegames by simply running them with 1.5.2.1, but as a separate application. (veqryn)

* Creating framework for loading older savegames using older included jar files. (veqryn)

* Fixing some errors with command line options, and abstracting some game running utilities. (veqryn)

* Fixing display error in old paratroopers tech that caused the land unit to appear to die with the air unit even after it has landed and survived any aa fire. (veqryn)

* Making sure technology still has an effect even if it is not in a player's tech frontier. (veqryn)

* Make sure the game chooser menu is cleared from memory after closed. (veqryn)

* Created method to maintain savegame compatibility between 1.6.1 and 1.6.1.1 with regards to techs. (veqryn)

* Removing static instances of all hardcoded Technologies. Everything now done with locally created instances per game data. (veqryn)

* Changed choose how "best dice roll" / "LHTR heavy bombers" works with Low Luck on, so that it will add a bonus equal to the number of dice sides divided by 6. (veqryn)

* Fixing scrambling again, so that even an amphibious assault on an undefended (blitzable) land territory, from an undefended sea zone, will still trigger scrambling. (veqryn)

* Removed game stopping message about unlimited purchases, whenever a unit or item cost so little that you can buy more than 10000 of it. (veqryn)

* Fixed errors in build.xml for java included version and mac version. (veqryn)

* Fixed null pointer error in Dynamix AI. (veqryn)
